# tabduct

./: .editorconfig  .gitattributes  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  DESIGN-consent-and-multibrowser.md  HUB-PLAN.md  IMPLEMENTATION-PLAN.md  ROADMAP.md
extension/: background.js  consent.js  manifest.json  popup.css  popup.html  popup.js  viewer.html  viewer.js
extension/handlers/: index.js
hosts/dotnet/: README.md  Tabduct.slnx
hosts/dotnet/Tabduct.Host/: Bridge.cs  McpServer.cs  NativeMessaging.cs  Program.cs  Register.cs  Tabduct.Host.csproj
hosts/node/: README.md  package.json  run_host.bat  run_host.sh
hosts/node/src/: bridge.js  constants.js  discovery.js  hub.js  index.js  mcp-server.js  native-messaging.js  register.js  secrets.js  tools.js
hosts/python/: README.md  pyproject.toml
hosts/python/tabduct_host/: __init__.py  __main__.py  bridge.py  constants.py  discovery.py  mcp_server.py  native_messaging.py  register.py
protocol/: PROTOCOL.md  messages.schema.json  tools.schema.json
protocol/conformance/: README.md  run-hub.mjs  run.mjs
scripts/: gen-icons.js  gen-key.js  smoke-host.mjs  test-consent.mjs
